--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Expresso</string>
+    <string name="title_activity_order">Order</string>
+    <string name="title_activity_customize">customize</string>
+    <string name="title_activity_qr">QR</string>
 </resources>
